--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/nstepper/12-ispy#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.3.1",
     "inquirer": "^8.2.4",
     "mysql2": "^3.4.0"
   }
